--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Sixteen Clothing - About Page</title>
+    <title></title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
              <div class="logo">
-    <a href="#"><img src="assets/images/Kayiok.png" alt="logo" width="400" height="400"></a> 
+    <a href="#"><img src="assets/images/client-01.png" alt="logo" width="400" height="400"></a> 
 
   </div>
         <div class="container">
