--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,12 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Sixteen Clothing - Contact Page</title>
+    <title></title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!--
 
-TemplateMo 546 Sixteen Clothing
 
-https://templatemo.com/tm-546-sixteen-clothing
-
--->
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -60,7 +55,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="">Our Services</a>
+                <a class="nav-link" href="products.html">Our Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Us</a>
@@ -137,6 +132,13 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <a></a>
                   <div class="content">
                     <img src="assets/images/more-info.jpg"alt=""width=""height="350">
+<br>
+<br>
+                    <ul><b>Email: kkecosafaris@gmail.com</ul></b>
+                    <br>
+<ul><b>Phone: +254 743 525 951 / +86 15661 359 206</ul></b>
+<br>
+<ul><b>Locations: Nairobi, Kenya / Narok, Kenya</ul></b>
                       
                   </div>
               </li>
@@ -149,15 +151,14 @@ https://templatemo.com/tm-546-sixteen-clothing
       </div>
     </div>
 
-
-    <footer>
+ <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; flavitech graphics Ltd.
+              <p>Copyright &copy;Flavitech Graphics ltd.
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">flavitech</a></p>
+            - Design: <a rel="nofollow noopener" href="" target="_blank">Flavitech Graphics ltd</a></p>
             </div>
           </div>
         </div>
