--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </li> 
               
               <li class="nav-item">
-                <a class="nav-link" href="">Our Services</a>
+                <a class="nav-link" href="products.html">Our Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">About Us</a>
@@ -126,7 +126,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/1.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/a.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>MAASAI MARA</h4></a>
                 <h6></h6>
@@ -144,10 +144,10 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/2.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/c.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$30.25</h6>
+                <a href="#"><h4>Amboseli</h4></a>
+                <h6></h6>
                 <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -162,10 +162,10 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/3.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/d.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$20.45</h6>
+                <a href="#"><h4>Tsavo East & West</h4></a>
+                <h6></h6>
                 <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -180,9 +180,9 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/4.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/e.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
+                <a href="#"><h4>Samburu</h4></a>
                 <h6>$15.25</h6>
                 <p></p>
                 <ul class="stars">
@@ -198,10 +198,10 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/5.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/f.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$12.50</h6>
+                <a href="#"><h4>Luxury Flying Safaris</h4></a>
+                <h6></h6>
                 <p>.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -216,10 +216,125 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/images/6.jpg" alt=""></a>
+              <a href="#"><img src="assets/images/g.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Tittle goes here</h4></a>
-                <h6>$22.50</h6>
+                <a href="#"><h4>Photography Safaris</h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span>Reviews (32)</span>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+        <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/h.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Cultural Tours (Maasai & local communities)</h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span>Reviews (32)</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/i.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4> Mountain Trekking (Mt. Kenya & Kilimanjaro)</h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span>Reviews (32)</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/j.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Beach Holidays (Diani, Mombasa, Watamu, Lamu)
+</h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span>Reviews (32)</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/k.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Group, Family & Student Safaris</h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span>Reviews (32)</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/l.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Hotel & Lodge Reservations</h4></a>
+                <h6></h6>
+                <p></p>
+                <ul class="stars">
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                  <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span>Reviews (32)</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="assets/images/xx.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4> Airport Transfers & International Travel Arrangements
+</h4></a>
+                <h6></h6>
                 <p></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
@@ -235,6 +350,7 @@ https://templatemo.com/tm-546-sixteen-clothing
         </div>
       </div>
     </div>
+
 
     <div class="best-features">
       <div class="container">
@@ -563,15 +679,14 @@ educate, and captivate.<a rel="nofollow" href="https://templatemo.com/contact"><
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy;sammy mwaniki.
+              <p>Copyright &copy;Flavitech Graphics ltd.
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">sammy mwaniki</a></p>
+            - Design: <a rel="nofollow noopener" href="" target="_blank">Flavitech Graphics ltd</a></p>
             </div>
           </div>
         </div>
       </div>
     </footer>
-
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
