--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
              <div class="logo">
-    <a href="#"><img src="assets/images/client-01.png" alt="logo" width="400" height="400"></a> 
+    <a href="#"><img src="assets/images/Kayiok.png" alt="logo" width="400" height="400"></a> 
 
   </div>
         <div class="container">
@@ -60,7 +60,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="">Our Services</a>
+                <a class="nav-link" href="products.html">Our Services</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="about.html">About Us</a>
@@ -185,9 +185,9 @@ Customer Satisfaction: Personalized itineraries and exceptional care</p>
         <div class="row">
           <div class="col-md-12">
             <div class="inner-content">
-              <p>Copyright &copy; flavitech graphics Ltd.
+              <p>Copyright &copy;Flavitech Graphics ltd.
             
-            - Design: <a rel="nofollow noopener" href="https://templatemo.com" target="_blank">flavitech</a></p>
+            - Design: <a rel="nofollow noopener" href="" target="_blank">Flavitech Graphics ltd</a></p>
             </div>
           </div>
         </div>
